<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="18dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:src="@mipmap/ic_signupimg_foreground" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/signup_name"
                android:drawableStart="@drawable/name"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/name"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:id="@+id/signup_lastName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bkg"
                android:drawableStart="@drawable/name"
                android:drawablePadding="8dp"
                android:hint="@string/lastname"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_dateOfBirth"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/birthdate"
                android:drawableStart="@drawable/date"
                android:inputType="date"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bkg"
                android:drawableStart="@drawable/email"
                android:inputType="textEmailAddress"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/signup_password"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/signup_confirm"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>
            <CheckBox
                android:id="@+id/areyoutrainer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/areyoutrainer" />

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:text="@string/signup"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>