<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workout_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:padding="16dp"
    tools:context=".WorkoutManagerEditActivity">

    <ImageView
        android:id="@+id/iVLogoEntrenador"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/imageView_logoEntrenador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_gym" />

    <TextView
        android:id="@+id/tvWorkoutEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/add_workout"
        android:textColor="#160C28"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iVLogoEntrenador" />

    <EditText
        android:id="@+id/etWorkoutName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#160C28"
        android:hint="@string/nombre_del_workout"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWorkoutEditTitle" />

    <EditText
        android:id="@+id/etWorkoutLevel"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#160C28"
        android:hint="@string/nivel"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWorkoutName" />

    <EditText
        android:id="@+id/etWorkoutCount"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#160C28"
        android:hint="@string/cantidad_de_ejercicios"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWorkoutLevel" />

    <EditText
        android:id="@+id/etWorkoutVideoUrl"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#160C28"
        android:hint="@string/video_url"
        android:inputType="textUri"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWorkoutCount" />

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWorkoutVideoUrl"
        app:layout_constraintVertical_bias="0.333">

        <Button
            android:id="@+id/btnCrearEntrenador"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="#160C28"
            android:text="@string/add"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnVolverEntrenador"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="#160C28"
            android:text="@string/volver"
            android:textColor="@android:color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
