<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:src="@mipmap/ic_signinimg_foreground" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/login_username"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:padding="8dp"
                android:hint="@string/name"
                android:drawableStart="@drawable/name"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/login_password"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>


            <CheckBox
                android:id="@+id/areyoutrainer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/areyoutrainer" />

            <CheckBox
                android:id="@+id/remembermechk"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/remember_me" />

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:text="@string/login"
                app:cornerRadius = "30dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>